// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component TThe component renders an empy li when the sections prop is not supplied 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Item"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="Item"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="Item"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Accordion Component The component only opens the last section when multiple sections have been clicked 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Item"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="Item"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="Item"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
  </li>
</ul>
`;

exports[`Accordion Component The component opens a clicked section 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Item"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="Item"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
    Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
  </li>
  <li
    className="Item"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Accordion Component The component renders no sections as active by default 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Item"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="Item"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="Item"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;
